--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -5,3 +5,4 @@ too.many.requests=We're experiencing high demand right now. Please try again in 
 invalid.uuid.format=Invalid ID provided : {0}
 invalid.request=Request contains invalid field
 bad.request=Invalid request body. Please check the JSON format
+circuit.breaker.open=The third-party service is currently unavailable. Please try again later
